Stop mockup image from stretching on page reload

--- a/src/pages/forgot-password/ForgotPassword.module.css
+++ b/src/pages/forgot-password/ForgotPassword.module.css
@@ -227,6 +227,7 @@
     margin-bottom: -1rem;
     margin-left: 12.4rem;
     margin-top: 4.9rem;
+    max-width: 50rem;
   }
   .copyright {
     font-size: 1.4rem;
